<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="medicine_report">약 보고서</string>
    <string name="medicine_alarm">약 알람</string>
    <string name="complete_take">복용 완료</string>
    <string name="before_take">복용 전</string>
    <string name="add_alarm">알람 추가</string>
    <string name="select_person">사람을 선택해주세요</string>
    <string name="select_medicine">약을 선택해주세요</string>
    <string name="select_medicine_short">약 선택</string>
    <string name="select_period">기간 선택</string>
    <string name="select_period_description">한번만 선택하면 바꾸기 전까지 자동으로 저장돼요!</string>
    <string name="select_alarm_time">알람 시간 선택</string>
    <string name="select_day">요일 선택</string>
    <string name="select_label">레이블 입력(선택)</string>
    <string name="label">레이블</string>
    <string name="enroll">등록</string>
    <string name="modify">수정</string>
    <string name="start">시작</string>
    <string name="end">종료</string>
    <string name="everyday">매일</string>
    <string name="weekday">평일</string>
    <string name="weekend">주말</string>
    <string name="select_date">날짜 선택</string>
</resources>