<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreateAlarmFragment">

        <include
            android:id="@+id/header"
            layout="@layout/layout_header"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/header">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/padding_default">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_person" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/padding_content" />

                <include layout="@layout/layout_rv_people" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_medicine" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/padding_content" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_medicine"
                    android:minHeight="56dp"
                    app:hintTextColor="@color/gray_txt">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/auto_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="40dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_period" />
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="4dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_period_description"
                    android:textSize="12sp"
                    android:textColor="@color/gray_txt"
                    android:textFontWeight="400"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="40dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_alarm_time" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="40dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_day" />


                <Space
                    android:layout_width="match_parent"
                    android:layout_height="40dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_label" />
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/padding_content"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:orientation="vertical"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="@dimen/margin_default">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label"
                        android:textColor="@color/gray_txt"
                        android:textSize="10sp" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"

                        />
                </LinearLayout>


            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>